# cpp-test

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  MyProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  cmake.bat  cmake_install.cmake  main.cpp  main.vcxproj  main.vcxproj.filters  run.bat
dll/z2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  cmake_install.cmake  lena-gray.sln  lena-gray.vcxproj  lena-gray.vcxproj.filters
dll/z2/Debug/: lena-gray.exp  lena-gray.lib
dll/z2/include/: lena-gray.h
dll/z2/lena-gray.dir/Debug/: lena-gray.dll.recipe  lena-gray.ilk
dll/z2/lena-gray.dir/Debug/lena-gray.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  lena-gray.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dll/z2/src/: lena-gray.cpp
dll/z2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
dll/z2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test/test_z2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  cmake_install.cmake  test-z2.sln  test-z2.vcxproj  test-z2.vcxproj.filters
test/test_z2/src/: test_z2.cpp
test/test_z2/test-z2.dir/Debug/: test-z2.exe.recipe  test-z2.ilk
test/test_z2/test-z2.dir/Debug/test-z2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test-z2.lastbuildstate
test/test_z2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
test/test_z2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+1 more)
(+18 files in other folders)
